--- a/.gitignore
+++ b/.gitignore
@@ -7,26 +7,60 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependencies
+node_modules/
+.pnp
+.pnp.js
+
+# Build outputs
+dist/
+dist-ssr/
+build/
+.next/
+out/
+
 # Environment variables
 .env
 .env.local
+.env.development.local
+.env.test.local
+.env.production.local
 .env.production
 
-node_modules
-dist
-dist-ssr
-*.local
+# Cache directories
+.cache/
+.vite/
+.turbo/
+.vercel/
 
-# Environment variables
-.env
+# Temporary files
+*.tmp
+*.temp
+*_temp.*
+*Fixed.*
+migration_corporate.sql
+cleanup_*.sql
+test_*.sql
 
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
-.idea
+.idea/
 .DS_Store
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+
+# OS generated files
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+
+# Development utilities
+start-dev.*
+Start-*.ps1
+testConnection.*
+utils/test*
+**/utils/test*
