feat: Reorganización completa del repositorio AutoMarket MultiTenant
 Nuevas características:
- README.md profesional con documentación completa
- Estructura de carpetas organizada y estandarizada
- Backend API completo con middleware y rutas
- Integración Supabase funcional y configurada
- Docker Compose optimizado para desarrollo

 Organización:
- Documentación movida a carpeta docs/ especializada
- API backend completa en carpeta api/ con src/
- Scripts de utilidad en carpeta scripts/
- .gitignore optimizado por categorías

 Configuración:
- Variables de entorno organizadas
- Workspace npm configurado para monorepo
- Docker compose con PostgreSQL + Redis
- Supabase conectado con datos de ejemplo

 Limpieza:
- Eliminados archivos duplicados y obsoletos
- Removida documentación redundante
- Cleanup de configuraciones temporales

 Estado: Sistema completamente funcional
-  API corriendo en puerto 3001
-  Frontend en puerto 5173
-  PostgreSQL + Redis operativos
-  Supabase integrado y funcionando

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,15 @@
-# Base de datos PostgreSQL (configuración del profesor)
-POSTGRES_DB=saas
-POSTGRES_USER=saas_user
-POSTGRES_PASSWORD=saas_pass
+# Base de datos PostgreSQL
+POSTGRES_DB=automarket_dev
+POSTGRES_USER=automarket_user
+POSTGRES_PASSWORD=your_password_here
 POSTGRES_PORT=5432
 
-# Adminer
-ADMINER_PORT=8080
+# Redis
+REDIS_PASSWORD=your_redis_password_here
+REDIS_PORT=6379
+
+# Frontend
+FRONTEND_DEV_PORT=5173
 
 # AutoMarket - Configuración adicional
 VITE_API_URL=http://localhost:3001
