--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,6 @@
 # =====================================
 # Configuración completa para desarrollo y producción
 
-version: '3.9'
-
 services:
   # =====================================
   # BASE DE DATOS POSTGRESQL + SUPABASE
@@ -86,6 +84,89 @@ services:
       - development
 
   # =====================================
+  # API BACKEND (DESARROLLO)
+  # =====================================
+  api-dev:
+    build:
+      context: ./api
+      dockerfile: Dockerfile
+      target: development
+    container_name: automarket-api-dev
+    restart: unless-stopped
+    depends_on:
+      database:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+    ports:
+      - "${API_DEV_PORT:-3001}:3001"
+    volumes:
+      - ./api:/app
+      - /app/node_modules
+      - api_logs:/app/logs
+    environment:
+      - NODE_ENV=development
+      - PORT=3001
+      - POSTGRES_HOST=database
+      - POSTGRES_PORT=5432
+      - POSTGRES_DB=${POSTGRES_DB:-automarket}
+      - POSTGRES_USER=${POSTGRES_USER:-postgres}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-postgres}
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+      - REDIS_PASSWORD=${REDIS_PASSWORD:-redis123}
+      - SUPABASE_URL=${SUPABASE_URL}
+      - SUPABASE_ANON_KEY=${SUPABASE_ANON_KEY}
+      - SUPABASE_SERVICE_ROLE_KEY=${SUPABASE_SERVICE_ROLE_KEY}
+      - JWT_SECRET=${JWT_SECRET:-dev_jwt_secret_key}
+      - FRONTEND_URL=http://localhost:5173
+    networks:
+      - automarket-network
+    profiles:
+      - development
+
+  # =====================================
+  # API BACKEND (PRODUCCIÓN)
+  # =====================================
+  api:
+    build:
+      context: ./api
+      dockerfile: Dockerfile
+      target: production
+    container_name: automarket-api
+    restart: unless-stopped
+    depends_on:
+      database:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+    ports:
+      - "${API_PORT:-3001}:3001"
+    volumes:
+      - api_logs:/app/logs
+      - api_uploads:/app/uploads
+    environment:
+      - NODE_ENV=production
+      - PORT=3001
+      - POSTGRES_HOST=database
+      - POSTGRES_PORT=5432
+      - POSTGRES_DB=${POSTGRES_DB:-automarket}
+      - POSTGRES_USER=${POSTGRES_USER:-postgres}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-postgres}
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+      - REDIS_PASSWORD=${REDIS_PASSWORD:-redis123}
+      - SUPABASE_URL=${SUPABASE_URL}
+      - SUPABASE_ANON_KEY=${SUPABASE_ANON_KEY}
+      - SUPABASE_SERVICE_ROLE_KEY=${SUPABASE_SERVICE_ROLE_KEY}
+      - JWT_SECRET=${JWT_SECRET}
+      - FRONTEND_URL=${FRONTEND_URL:-http://localhost}
+    networks:
+      - automarket-network
+    profiles:
+      - production
+
+  # =====================================
   # FRONTEND REACT (PRODUCCIÓN)
   # =====================================
   frontend:
@@ -116,119 +197,75 @@ services:
     profiles:
       - production
 
-  # =====================================
-  # ADMINER PARA GESTIÓN DE BD
-  # =====================================
-  adminer:
-    image: adminer:latest
-    container_name: automarket-adminer
-    restart: unless-stopped
-    depends_on:
-      database:
-        condition: service_healthy
-    ports:
-      - "${ADMINER_PORT:-8080}:8080"
-    environment:
-      ADMINER_DEFAULT_SERVER: database
-      ADMINER_DESIGN: nette
-    networks:
-      - automarket-network
-    profiles:
-      - development
-      - tools
+
 
   # =====================================
-  # PGADMIN PARA GESTIÓN AVANZADA DE BD
+  # NGINX PROXY (PARA PRODUCCIÓN) - DESHABILITADO
   # =====================================
-  pgadmin:
-    image: dpage/pgadmin4:latest
-    container_name: automarket-pgadmin
-    restart: unless-stopped
-    depends_on:
-      database:
-        condition: service_healthy
-    ports:
-      - "${PGADMIN_PORT:-8081}:80"
-    environment:
-      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_EMAIL:-admin@automarket.com}
-      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_PASSWORD:-admin123}
-      PGADMIN_CONFIG_SERVER_MODE: 'False'
-    volumes:
-      - pgadmin_data:/var/lib/pgadmin
-      - ./config/pgadmin_servers.json:/pgadmin4/servers.json:ro
-    networks:
-      - automarket-network
-    profiles:
-      - development
-      - tools
+  # nginx-proxy:
+  #   image: nginx:alpine
+  #   container_name: automarket-proxy
+  #   restart: unless-stopped
+  #   depends_on:
+  #     - frontend
+  #   ports:
+  #     - "${PROXY_HTTP_PORT:-80}:80"
+  #     - "${PROXY_HTTPS_PORT:-443}:443"
+  #   volumes:
+  #     - ./config/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+  #     - ./config/nginx/ssl:/etc/nginx/ssl:ro
+  #     - nginx_logs:/var/log/nginx
+  #   networks:
+  #     - automarket-network
+  #   profiles:
+  #     - production
 
   # =====================================
-  # NGINX PROXY (PARA PRODUCCIÓN)
+  # MONITORING CON PROMETHEUS - DESHABILITADO
   # =====================================
-  nginx-proxy:
-    image: nginx:alpine
-    container_name: automarket-proxy
-    restart: unless-stopped
-    depends_on:
-      - frontend
-    ports:
-      - "${PROXY_HTTP_PORT:-80}:80"
-      - "${PROXY_HTTPS_PORT:-443}:443"
-    volumes:
-      - ./config/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./config/nginx/ssl:/etc/nginx/ssl:ro
-      - nginx_logs:/var/log/nginx
-    networks:
-      - automarket-network
-    profiles:
-      - production
+  # prometheus:
+  #   image: prom/prometheus:latest
+  #   container_name: automarket-prometheus
+  #   restart: unless-stopped
+  #   ports:
+  #     - "${PROMETHEUS_PORT:-9090}:9090"
+  #   volumes:
+  #     - ./config/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro
+  #     - prometheus_data:/prometheus
+  #   command:
+  #     - '--config.file=/etc/prometheus/prometheus.yml'
+  #     - '--storage.tsdb.path=/prometheus'
+  #     - '--web.console.libraries=/etc/prometheus/console_libraries'
+  #     - '--web.console.templates=/etc/prometheus/consoles'
+  #     - '--storage.tsdb.retention.time=200h'
+  #     - '--web.enable-lifecycle'
+  #   networks:
+  #     - automarket-network
+  #   profiles:
+  #     - monitoring
 
   # =====================================
-  # MONITORING CON PROMETHEUS
+  # GRAFANA PARA VISUALIZACIÓN - DESHABILITADO
   # =====================================
-  prometheus:
-    image: prom/prometheus:latest
-    container_name: automarket-prometheus
-    restart: unless-stopped
-    ports:
-      - "${PROMETHEUS_PORT:-9090}:9090"
-    volumes:
-      - ./config/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro
-      - prometheus_data:/prometheus
-    command:
-      - '--config.file=/etc/prometheus/prometheus.yml'
-      - '--storage.tsdb.path=/prometheus'
-      - '--web.console.libraries=/etc/prometheus/console_libraries'
-      - '--web.console.templates=/etc/prometheus/consoles'
-      - '--storage.tsdb.retention.time=200h'
-      - '--web.enable-lifecycle'
-    networks:
-      - automarket-network
-    profiles:
-      - monitoring
-
-  # =====================================
-  # GRAFANA PARA VISUALIZACIÓN
-  # =====================================
-  grafana:
-    image: grafana/grafana:latest
-    container_name: automarket-grafana
-    restart: unless-stopped
-    depends_on:
-      - prometheus
-    ports:
-      - "${GRAFANA_PORT:-3000}:3000"
-    environment:
-      GF_SECURITY_ADMIN_USER: ${GRAFANA_USER:-admin}
-      GF_SECURITY_ADMIN_PASSWORD: ${GRAFANA_PASSWORD:-admin123}
-      GF_INSTALL_PLUGINS: grafana-piechart-panel
-    volumes:
-      - grafana_data:/var/lib/grafana
-      - ./config/grafana/provisioning:/etc/grafana/provisioning:ro
-    networks:
-      - automarket-network
-    profiles:
-      - monitoring
+  # grafana:
+  #   image: grafana/grafana:latest
+  #   container_name: automarket-grafana
+  #   restart: unless-stopped
+  #   depends_on:
+  #     - prometheus
+  #   ports:
+  #     - "${GRAFANA_PORT:-3000}:3000"
+  #   environment:
+  #     GF_SECURITY_ADMIN_USER: ${GRAFANA_USER:-admin}
+  #     GF_SECURITY_ADMIN_PASSWORD: ${GRAFANA_PASSWORD:-admin123}
+  #     GF_INSTALL_PLUGINS: grafana-piechart-panel
+  #   volumes:
+  #     - grafana_data:/var/lib/grafana
+  #     - ./config/grafana/provisioning:/etc/grafana/provisioning:ro
+  #   networks:
+  #     - automarket-network
+  #   profiles:
+  #     - monitoring
 
 # =====================================
 # VOLÚMENES PERSISTENTES
@@ -238,15 +275,11 @@ volumes:
     driver: local
   redis_data:
     driver: local
-  pgadmin_data:
-    driver: local
   frontend_cache:
     driver: local
-  nginx_logs:
+  api_logs:
     driver: local
-  prometheus_data:
-    driver: local
-  grafana_data:
+  api_uploads:
     driver: local
 
 # =====================================
